--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".RegisterActivity" />
-        <activity android:name="ui.home.HomeFragment"/>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".ui.home.HomeFragment"/>
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
