--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.main.MainActivity"/>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".ui.home.HomeFragment"/>
-        <activity android:name=".ui.home.DaftarPelanggaranFragment"/>
+        <activity android:name=".ui.home.DaftarPelanggaranFragment" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
-
 </manifest>
