--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.main.MainActivity"/>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".ui.home.DaftarPelanggaranFragment" />
+<!--        <activity android:name=".ui.daftarpelanggan.DaftarPelangganFragment" />-->
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
